<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".app.NewListFragment">

        <EditText
            android:id="@+id/list_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/new_list_name_text"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/reminder_switch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Switch
            android:id="@+id/reminder_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="@string/set_reminder_text"
            app:layout_constraintBottom_toTopOf="@+id/date_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_name_edit_text"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <EditText
            android:id="@+id/date_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/date_text"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:layout_constraintBottom_toTopOf="@+id/time_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reminder_switch" />

        <EditText
            android:id="@+id/time_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/time_text"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:layout_constraintBottom_toTopOf="@+id/add_new_list_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_edit_text" />

        <Button
            android:id="@+id/add_new_list_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/add_list_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_edit_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


